<resources>
    <string name="app_name">Camp Workcoeman Map</string>
    <string name="launcher_label">CW Map</string>
    <string name="access_token">pk.MapboxGLNativeInsistsOnAnAccessTokenEvenThoughItIsRunningCompletelyOffline</string>
    <string name="map_style">asset://map-data/style.json</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="toast_left_camp">You left camp…</string>
    <string name="snackbar_denied_location">Location permission is required to show location.</string>
    <string name="settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_title_zoom_buttons">Show zoom buttons</string>
    <string name="pref_summary_zoom_buttons"></string>
    <string name="pref_title_location_button">Show location button</string>
    <string name="pref_summary_location_button"></string>

    <!-- Strings releated to About -->
    <string name="title_activity_about">About</string>
    <string name="about_version">Version </string>
    <string name="about_map">Map data collected, processed, and edited by Matthew Petroff.
        Topography and some other features derived from 2014 Hurricane Sandy Lidar 1-meter DEM;
        elevation contours are in meters. Some features derived from Connecticut 2012 Multispectral
        Orthophotography. Hydrography derived from elevation data and near-infrared orthoimagery.
        Data collected with carrier-phase enhanced GNSS measurements 2012–2015. Data may be
        incomplete.</string>
    <string name="app_copyright_label">Application Copyright</string>
    <string name="map_data_copyright_label">Map Data Copyright</string>
    <string name="title_activity_app_copyright">Application Copyright</string>
    <string name="app_copyright_file">file:///android_asset/app_copyright.html</string>
    <string name="title_activity_map_data_copyright">Map Data Copyright</string>
    <string name="map_data_copyright_file">file:///android_asset/map_data_copyright.html</string>
</resources>
